Simplify test setup